<resources>
    <string name="app_name">Healsted</string>

    <!-- Mnemocodes -->
    <string name="mnemocode_endless">&#8734;</string>

    <!-- Auth -->
    <string name="auth_start">Давайте следить за здоровьем вместе</string>
    <string name="auth_sign_up">Зарегистрироваться</string>
    <string name="auth_log_in">Уже зарегистрированы? Войти</string>
    <string name="auth_email">Email</string>
    <string name="auth_email_hint">youremail@email.com</string>
    <string name="auth_nickname">Никнейм</string>
    <string name="auth_nickname_hint">твой никнейм</string>
    <string name="auth_password">Пароль</string>
    <string name="auth_password_hint">твой пароль</string>
    <string name="auth_empty_data">Пожалуйста, введите данные!</string>

    <!-- Sign Up -->
    <string name="sign_up_title">Регистрация</string>
    <string name="sign_up_confirm">Зарегистрироваться</string>

    <!-- Log In -->
    <string name="log_in_title">Авторизация</string>
    <string name="log_in_confirm">Войти</string>

    <!-- Notification -->
    <string name="channel_name">Healsted</string>
    <string name="channel_description">Healsted</string>
    <string name="notification_title_pill">Не забудьте принять лекарство</string>
    <string name="notification_title_health_monitoring">Не забудьте отметить данные о</string>

    <!-- Menu -->
    <string name="menu_profile_label">Профиль</string>
    <string name="menu_pills_label">Медикаменты</string>
    <string name="menu_dashboard_label">Главная</string>
    <string name="menu_health_label">Здоровье</string>
    <string name="menu_settings_label">Настройки</string>

    <string name="menu_mark_as_done">Выполнено</string>
    <string name="menu_send">Отправить</string>
    <string name="menu_edit">Редактировать</string>
    <string name="menu_delete">Удалить</string>

    <!-- Welcome Strings -->
    <string name="welcome_string_morning">Доброе утро, %s!</string>
    <string name="welcome_string_afternoon">Добрый день, %s!</string>
    <string name="welcome_string_evening">Добрый вечер, %s!</string>
    <string name="welcome_string_night">Доброй ночи, %s!</string>

    <!-- Dashboard -->
    <string name="dashboard_mood">Как настроение сегодня?</string>
    <string name="dashboard_date_today">Сегодня</string>
    <string name="dashboard_date_early">Ранее</string>
    <string name="dashboard_date_later">Позже</string>
    <string name="dashboard_date_unknown">Неизвестно</string>
    <string name="dashboard_empty_pills_title">На сегодня нет лекарств</string>
    <string name="dashboard_empty_pills_comment">Вы можете добавить их во вкладке Лекарства</string>
    <string name="dashboard_today_pill_completed">Завершено</string>

    <string name="pill_type_cream">мг</string>
    <string name="pill_type_liquid">мл</string>
    <string name="pill_type_other">шт</string>

    <!-- Pills -->
    <string name="pills_active_tab_title">Активные</string>
    <string name="pills_completed_tab_title">Завершенные</string>

    <!-- Pill Editor -->
    <string name="pill_editor_title_add_pill">Добавить лекарство</string>
    <string name="pill_editor_title_edit_pill">Редактировать лекарство</string>
    <string name="pill_editor_time_notification">Время уведомления</string>
    <string name="pill_editor_end_date_enabled">Есть конечная дата</string>
    <string name="pill_editor_end_date">Дата окончания приема</string>
    <string name="pill_editor_start_date">Дата начала приема</string>
    <string name="pill_editor_add_time">Добавить время</string>
    <string name="pill_editor_comment_hint">Комментарий</string>
    <string name="pill_editor_dosage">Дозировка</string>
    <string name="pill_editor_dates_taken_type">Частота приема</string>
    <string name="pill_editor_time_hint">Время</string>
    <string name="pill_editor_start_date_hint">Дата начала</string>
    <string name="pill_editor_end_date_hint">Дата конца</string>
    <string name="pill_editor_name_hint">Название</string>
    <string name="pill_editor_confirm">Подтвердить</string>
    <string name="pill_editor_other">Дополнительно</string>

    <!-- Profile -->
    <string name="profile_pills_history">История</string>

    <!-- Health -->
    <string name="health_title">Мое здоровье</string>
    <string name="health_update">Обновить</string>

    <!-- Health Attribute -->
    <string name="health_attribute_add_value">Добавить значение</string>
    <string name="health_attribute_current_value">Текущее значение:</string>
    <string name="health_attribute_switch_remind_to_measure">Напоминать об измерении</string>
    <string name="health_attribute_history">История</string>
    <string name="health_attribute_value_title">Значение</string>
    <string name="health_attribute_date_title">Дата</string>
    <string name="health_attribute_value_invalid">Вы уверены, что все так плохо? Возможно, стоит обратиться к врачу (если вы до него, конечно, дойдете).</string>

    <string name="awful">AWFUL</string>
    <string name="bad">BAD</string>
    <string name="okay">OKAY</string>
    <string name="good">GOOD</string>
    <string name="great">GREAT</string>
</resources>