<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_shape_gradient">

    <TextView
        android:id="@+id/textViewStart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="40dp"
        android:text="@string/auth_start"
        android:textAlignment="center"
        android:textAppearance="@style/Font.Heading_2.Medium"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@null"
        app:layout_constraintBottom_toTopOf="@id/buttonSignUp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewStart"
        app:srcCompat="@drawable/ic_logo_red" />

    <TextView
        android:id="@+id/textViewAppName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textAppearance="@style/Font.Heading_1.Black"
        app:layout_constraintTop_toBottomOf="@id/imageViewLogo" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/pillsCardRed"
        android:padding="16dp"
        android:text="@string/auth_sign_up"
        android:textAllCaps="true"
        android:textAppearance="@style/Font.Body_1.Medium"
        app:cornerRadius="16dp"
        app:layout_constraintBottom_toTopOf="@id/textViewLogIn" />

    <TextView
        android:id="@+id/textViewLogIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginBottom="40dp"
        android:background="?selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:padding="@dimen/padding_8"
        android:text="@string/auth_log_in"
        android:textAlignment="center"
        android:textAppearance="@style/Font.Body_1.Medium"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>