<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:minHeight="70dp"
        android:orientation="horizontal"
        android:weightSum="5">

        <LinearLayout
            android:id="@+id/btn_awful"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_awful"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:contentDescription="@null"
                app:srcCompat="@drawable/ic_rating_awful" />

            <TextView
                android:id="@+id/tv_awful"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/awful"
                android:textAllCaps="true"
                android:textAppearance="@style/Font.Body_2.Bold"
                android:textColor="@color/rate_color_awful"
                android:visibility="invisible" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_bad"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_bad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:contentDescription="@string/bad"
                app:srcCompat="@drawable/ic_rating_bad" />

            <TextView
                android:id="@+id/tv_bad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/bad"
                android:textAllCaps="true"
                android:textAppearance="@style/Font.Body_2.Bold"
                android:textColor="@color/rate_color_bad"
                android:visibility="invisible" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_okay"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="4dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_okay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:contentDescription="@string/good"
                app:srcCompat="@drawable/ic_rating_okay" />

            <TextView
                android:id="@+id/tv_okay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/okay"
                android:textAllCaps="true"
                android:textAppearance="@style/Font.Body_2.Bold"
                android:textColor="@color/rate_color_okay"
                android:visibility="invisible" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_good"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_good"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:contentDescription="@string/good"
                app:srcCompat="@drawable/ic_rating_good" />

            <TextView
                android:id="@+id/tv_good"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/good"
                android:textAllCaps="true"
                android:textAppearance="@style/Font.Body_2.Bold"
                android:textColor="@color/rate_color_good"
                android:visibility="invisible" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_great"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_great"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:contentDescription="@string/great"
                app:srcCompat="@drawable/ic_rating_good" />

            <TextView
                android:id="@+id/tv_great"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/great"
                android:textAllCaps="true"
                android:textAppearance="@style/Font.Body_2.Bold"
                android:textColor="@color/rate_color_great"
                android:visibility="invisible" />
        </LinearLayout>
    </LinearLayout>
</merge>